# texproject

./: .gitignore  .python-version  BUILD.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
config/: user_info.yaml
src/texproject/: __init__.py  base.py  command.py  config_defaults.toml  control.py  error.py  export.py  filesystem.py  git.py  output.py  proc.py  process.py  template.py  term.py  utils.py
src/texproject/defaults/: config.toml  template.toml
src/texproject/templates/: bibinfo.tex  build.yaml  build_latex.yml  classinfo.tex  pre-commit
test/: conftest.py  test_first.py
texproject/: Makefile  __init__.py  __main__.py  command.py  error.py  export.py  filesystem.py  latex.py  parse.py  script.py  scripts.py  template.py  term.py
texproject/sample_project/: Makefile  citations.bib  format-preprint.sty  macros-general.sty  project-macros.sty  sample_project.aux  sample_project.blg  sample_project.fdb_latexmk  sample_project.fls  sample_project.tex  sample_project.toc
