[build-system]
requires = [
    "setuptools>=59",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__"
]
ignore = []
# stubPath = "src/stubs"
# venv = "env367"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
# pythonPlatform = "Linux"

# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]
