[build-system]
requires = [
    "setuptools>=59",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__"
]
ignore = []
# stubPath = "src/stubs"
# venv = "env367"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"

[tool.black]
target-version = ["py310"]
