[metadata]
name = texproject
version = attr: texproject.__version__
author = Alex Rutar
author_email = a@rutar.org
description = An automatic LaTeX project manager.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexrutar/texproject
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requies = 
    pytomlpp >= 1.0.9
    PyYAML >= 6.0
    Jinja2 >= 2.11.2
    xdg >= 4.0.1
    click >= 8.0
    keyring >= 23.4.0
include_package_data = True

[options.entry_points]
console_scripts =
    tpr = texproject.command:cli

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    F401,
