[metadata]
name = texproject
version = attr: texproject.__version__
author = Alex Rutar
author_email = a@rutar.org
description = An automatic LaTeX project manager.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexrutar/texproject
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11.0
install_requires =
    tomli-w >= 1.0.0
    Jinja2 >= 3.1.2
    xdg >= 5.1.1
    click >= 8.1.3
include_package_data = True

[options.entry_points]
console_scripts =
    tpr = texproject.command:cli

[options.packages.find]
where = src

[flake8]
max-line-length = 89
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
per-file-ignore =
    __init__.py: F401,

[mypy]
python_version = 3.11
exclude = build
